# imgmarker

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  README.rst  paper.md  pyproject.toml  setup.py
galscribe/: README.md  galscribe.py  pyproject.toml
imgmarker/: README.md  __init__.py  __main__.py  catalog.py  config.py  image.py  io.py  mark.py  pyproject.toml  pyqt.py  testing.ipynb  tests.py  widget.py  window.py
imgmarker/coordinates/: __init__.py
imgmarker/coordinates/wcslib/Fortran/: GNUmakefile  cel.inc  cel_bindc.f90  cel_data.f  cel_f.c  dis.inc  dis_bindc.f90  dis_data.f  dis_f.c  fitshdr.inc  fitshdr_bindc.f90  fitshdr_data.f  fitshdr_f.c  getwcstab.inc  getwcstab_f.c  lin.inc  lin_bindc.f90  lin_data.f  lin_f.c  log.inc  log_data.f  log_f.c  prj.inc  prj_bindc.f90  prj_data.f  prj_f.c  spc.inc  spc_bindc.f90  spc_data.f  spc_f.c  sph.inc  sph_f.c  spx.inc  spx_bindc.f90  spx_data.f  spx_f.c  tab.inc  tab_bindc.f90  tab_data.f  tab_f.c  (+19 more)
imgmarker/coordinates/wcslib/doxygen/: Doxyfile  GNUmakefile  README  doxextr.l  mainpage.dox
imgmarker/coordinates/wcslib/html/: annotated.html  cel_8h.html  cel_8h_source.html  classes.html  deprecated.html  diagnostics.html  dir_af99bb3c152a306abd27951285ad1127.html  dis_8h.html  dis_8h_source.html  doxygen_crawl.html  files.html  fitshdr_8h.html  fitshdr_8h_source.html  fortran.html  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_e.html  functions_f.html  functions_g.html  functions_h.html  functions_i.html  functions_j.html  functions_k.html  functions_l.html  functions_m.html  functions_n.html  functions_o.html  functions_p.html  functions_r.html  functions_s.html  functions_t.html  functions_u.html  functions_v.html  functions_vars.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  functions_vars_e.html  (+138 more)
imgmarker/coordinates/wcslib/pgsbox/: GNUmakefile  cpgsbox.c  cpgsbox.h  cpgtest.c  fscan.F  lngvel.F  pgcrfn.F  pgcrfn_bindc.f90  pgcrvl.f  (+6 more)
imgmarker/gui/: mark.py  pyqt.py  window.py
imgmarker/image/: __init__.py
imgmarker/io/: fits.py
imgmarker/libwcs/: __init__.py  wcs.py
imgmarker/tests/: TEST_catalog.csv  TEST_catalog.txt
imgmarker/tests/test_images/: SPT-CLJ0000-5141_4.80_sigma_grz_cont.tif  SPT-CLJ2347-5101_4.39_sigma_grz_cont.tif  SPT-CLJ2359-5051_4.92_sigma_grz_cont.tif
(+202 files in other folders)
